Fixed some formatting issues